grammar/generated/SecureLangParser.py
# Generated from SecureLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SecureLangParser ( Parser ):

    grammarFileName = "SecureLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'if'", "'else'", "'while'", 
                     "'for'", "'in'", "'return'", "'import'", "'from'", 
                     "'and'", "'or'", "'not'", "'True'", "'False'", "'None'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "':'", 
                     "'.'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", 
                     "'<'", "'>'", "'=='", "'>='", "'<='", "'!='" ]

    symbolicNames = [ "<INVALID>", "DEF", "IF", "ELSE", "WHILE", "FOR", 
                      "IN", "RETURN", "IMPORT", "FROM", "AND", "OR", "NOT", 
                      "TRUE", "FALSE", "NONE", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LBRACK", "RBRACK", "COMMA", "COLON", "DOT", 
                      "ASSIGN", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", 
                      "POWER", "LT", "GT", "EQ", "GE", "LE", "NE", "IDENTIFIER", 
                      "NUMBER", "STRING", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "NEWLINE", "WS" ]

    RULE_program = 0
    RULE_statementList = 1
    RULE_statement = 2
    RULE_functionDef = 3
    RULE_parameterList = 4
    RULE_block = 5
    RULE_ifStatement = 6
    RULE_whileStatement = 7
    RULE_forStatement = 8
    RULE_returnStatement = 9
    RULE_assignment = 10
    RULE_expressionStatement = 11
    RULE_importStatement = 12
    RULE_dottedName = 13
    RULE_expression = 14
    RULE_orExpr = 15
    RULE_andExpr = 16
    RULE_notExpr = 17
    RULE_comparison = 18
    RULE_compOp = 19
    RULE_addExpr = 20
    RULE_mulExpr = 21
    RULE_unaryExpr = 22
    RULE_powerExpr = 23
    RULE_atomExpr = 24
    RULE_trailer = 25
    RULE_atom = 26
    RULE_listLiteral = 27
    RULE_dictLiteral = 28
    RULE_dictEntry = 29
    RULE_argumentList = 30
    RULE_argument = 31
    RULE_memberAccess = 32

    ruleNames =  [ "program", "statementList", "statement", "functionDef", 
                   "parameterList", "block", "ifStatement", "whileStatement", 
                   "forStatement", "returnStatement", "assignment", "expressionStatement", 
                   "importStatement", "dottedName", "expression", "orExpr", 
                   "andExpr", "notExpr", "comparison", "compOp", "addExpr", 
                   "mulExpr", "unaryExpr", "powerExpr", "atomExpr", "trailer", 
                   "atom", "listLiteral", "dictLiteral", "dictEntry", "argumentList", 
                   "argument", "memberAccess" ]

    EOF = Token.EOF
    DEF=1
    IF=2
    ELSE=3
    WHILE=4
    FOR=5
    IN=6
    RETURN=7
    IMPORT=8
    FROM=9
    AND=10
    OR=11
    NOT=12
    TRUE=13
    FALSE=14
    NONE=15
    LPAREN=16
    RPAREN=17
    LBRACE=18
    RBRACE=19
    LBRACK=20
    RBRACK=21
    COMMA=22
    COLON=23
    DOT=24
    ASSIGN=25
    PLUS=26
    MINUS=27
    STAR=28
    SLASH=29
    PERCENT=30
    POWER=31
    LT=32
    GT=33
    EQ=34
    GE=35
    LE=36
    NE=37
    IDENTIFIER=38
    NUMBER=39
    STRING=40
    LINE_COMMENT=41
    BLOCK_COMMENT=42
    NEWLINE=43
    WS=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(SecureLangParser.StatementListContext,0)


        def EOF(self):
            return self.getToken(SecureLangParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.NEWLINE)
            else:
                return self.getToken(SecureLangParser.NEWLINE, i)

        def getRuleIndex(self):
            return SecureLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SecureLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 66
                self.match(SecureLangParser.NEWLINE)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.statementList()
            self.state = 73
            self.match(SecureLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SecureLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(SecureLangParser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.NEWLINE)
            else:
                return self.getToken(SecureLangParser.NEWLINE, i)

        def getRuleIndex(self):
            return SecureLangParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self)
            else:
                return visitor.visitChildren(self)




    def statementList(self):

        localctx = SecureLangParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1924348113846) != 0):
                self.state = 75
                self.statement()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==43:
                    self.state = 76
                    self.match(SecureLangParser.NEWLINE)
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDef(self):
            return self.getTypedRuleContext(SecureLangParser.FunctionDefContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(SecureLangParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(SecureLangParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(SecureLangParser.ForStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(SecureLangParser.ReturnStatementContext,0)


        def assignment(self):
            return self.getTypedRuleContext(SecureLangParser.AssignmentContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(SecureLangParser.ExpressionStatementContext,0)


        def importStatement(self):
            return self.getTypedRuleContext(SecureLangParser.ImportStatementContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SecureLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.functionDef()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.ifStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.whileStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.forStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 91
                self.returnStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 92
                self.assignment()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 93
                self.expressionStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 94
                self.importStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(SecureLangParser.DEF, 0)

        def IDENTIFIER(self):
            return self.getToken(SecureLangParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(SecureLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(SecureLangParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(SecureLangParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(SecureLangParser.ParameterListContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):

        localctx = SecureLangParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(SecureLangParser.DEF)
            self.state = 98
            self.match(SecureLangParser.IDENTIFIER)
            self.state = 99
            self.match(SecureLangParser.LPAREN)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 100
                self.parameterList()


            self.state = 103
            self.match(SecureLangParser.RPAREN)
            self.state = 104
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.IDENTIFIER)
            else:
                return self.getToken(SecureLangParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.COMMA)
            else:
                return self.getToken(SecureLangParser.COMMA, i)

        def getRuleIndex(self):
            return SecureLangParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = SecureLangParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(SecureLangParser.IDENTIFIER)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 107
                self.match(SecureLangParser.COMMA)
                self.state = 108
                self.match(SecureLangParser.IDENTIFIER)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(SecureLangParser.LBRACE, 0)

        def statementList(self):
            return self.getTypedRuleContext(SecureLangParser.StatementListContext,0)


        def RBRACE(self):
            return self.getToken(SecureLangParser.RBRACE, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.NEWLINE)
            else:
                return self.getToken(SecureLangParser.NEWLINE, i)

        def getRuleIndex(self):
            return SecureLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = SecureLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(SecureLangParser.LBRACE)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 115
                self.match(SecureLangParser.NEWLINE)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.statementList()
            self.state = 122
            self.match(SecureLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SecureLangParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(SecureLangParser.ExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SecureLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(SecureLangParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(SecureLangParser.ELSE, 0)

        def ifStatement(self):
            return self.getTypedRuleContext(SecureLangParser.IfStatementContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.NEWLINE)
            else:
                return self.getToken(SecureLangParser.NEWLINE, i)

        def getRuleIndex(self):
            return SecureLangParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = SecureLangParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(SecureLangParser.IF)
            self.state = 125
            self.expression()
            self.state = 126
            self.block()
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==43:
                    self.state = 127
                    self.match(SecureLangParser.NEWLINE)
                    self.state = 132
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 133
                self.match(SecureLangParser.ELSE)
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==43:
                    self.state = 134
                    self.match(SecureLangParser.NEWLINE)
                    self.state = 139
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 142
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2]:
                    self.state = 140
                    self.ifStatement()
                    pass
                elif token in [18]:
                    self.state = 141
                    self.block()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SecureLangParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(SecureLangParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(SecureLangParser.BlockContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = SecureLangParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(SecureLangParser.WHILE)
            self.state = 147
            self.expression()
            self.state = 148
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(SecureLangParser.FOR, 0)

        def IDENTIFIER(self):
            return self.getToken(SecureLangParser.IDENTIFIER, 0)

        def IN(self):
            return self.getToken(SecureLangParser.IN, 0)

        def expression(self):
            return self.getTypedRuleContext(SecureLangParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(SecureLangParser.BlockContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = SecureLangParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(SecureLangParser.FOR)
            self.state = 151
            self.match(SecureLangParser.IDENTIFIER)
            self.state = 152
            self.match(SecureLangParser.IN)
            self.state = 153
            self.expression()
            self.state = 154
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(SecureLangParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(SecureLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = SecureLangParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(SecureLangParser.RETURN)
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 157
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(SecureLangParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(SecureLangParser.ExpressionContext,0)


        def IDENTIFIER(self):
            return self.getToken(SecureLangParser.IDENTIFIER, 0)

        def memberAccess(self):
            return self.getTypedRuleContext(SecureLangParser.MemberAccessContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = SecureLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 160
                self.match(SecureLangParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.state = 161
                self.memberAccess()
                pass


            self.state = 164
            self.match(SecureLangParser.ASSIGN)
            self.state = 165
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(SecureLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStatement" ):
                return visitor.visitExpressionStatement(self)
            else:
                return visitor.visitChildren(self)




    def expressionStatement(self):

        localctx = SecureLangParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(SecureLangParser.IMPORT, 0)

        def dottedName(self):
            return self.getTypedRuleContext(SecureLangParser.DottedNameContext,0)


        def FROM(self):
            return self.getToken(SecureLangParser.FROM, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.IDENTIFIER)
            else:
                return self.getToken(SecureLangParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.COMMA)
            else:
                return self.getToken(SecureLangParser.COMMA, i)

        def getRuleIndex(self):
            return SecureLangParser.RULE_importStatement
